# zoover-assignment

./: README.md  accommodations_output.json  docker-compose.yml
_init/: .env  .gitignore  Dockerfile  entrypoint.sh
_init/migrations/2023-04-26-080756_create_accommodations/: down.sql  up.sql
_init/migrations/2023-04-27-083746_accommodation_add_timezone/: down.sql  up.sql
_init/migrations/2023-04-27-160444_create_review_table/: down.sql  up.sql
data-importer/: .env  .gitignore  Cargo.toml  Dockerfile  sqlx-data.json
data-importer/src/: config.rs  main.rs
data-importer/src/controllers/: create_accommodation.rs  create_multiple_accommodations.rs  create_multiple_reviews.rs  create_review.rs  mod.rs
data-importer/src/models/: accommodation.rs  mod.rs  review.rs
data-importer/src/routes/: accommodation.rs  accommodations.rs  mod.rs  review.rs  reviews.rs
data-importer/src/types/: accommodation.rs  app_context.rs  mod.rs  review.rs
data-service/: .env  Dockerfile  Pipfile  entrypoint.sh  main.py  setup-dev.sh
data-service/app/: main.py
data-service/app/controllers/: get_accommodation.py  get_all_accommodations.py  get_all_reviews.py  get_single_review.py
data-service/app/routers/: accommodation.py  review.py
data-service/app/types/: accommodation.py  review.py
data-service/app/utils/: accommodation_conversions.py  review_conversions.py
scoring-service/: .env  .gitignore  Dockerfile  package-lock.json  package.json
scoring-service/src/: main.ts
test_data/: accommodations.json  single_accommodation.json  single_review.json
(+18 files in other folders)
