[package]
name = "data-importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
envconfig = "0.10.0"
serde = "1.0.160"
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["postgres", "uuid", "chrono", "runtime-tokio-native-tls", "offline", "macros", "json"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
